	- Contrib - mattwb65: Added testing operserv/modunload
	- API fix: Fixed a bug in module_void
	- Contrib - mattwb65: Added chanserv/lol (for an example command) and chanserv/away (for an example hook module) 
	- Docs: Added API docs
	- Core: We no longer censor register
	- Core: Formatted the time chakora was started in the "Chakora was started" message
	- Chakora: Unbreak - lib files were misplaced
	- Core: Added SIGINT handling
	- Modules: Made operserv/shutdown log to the logfile
	- API: Added is_registered
	- Modules: nickserv/register now writes to the db and checks if the nickname is already registered
	- Core: killed src/Chakora/Protocol and src/Chakora/Server.
	- API: Changed the way of sending data in services. Use full services names such as 'chanserv' instead of 'cs'.
	- Modules: Fixed official modules to follow the rules of the updated API.
	- API: Added serv_squit()
	- Modules: Fixed nickserv/register to follow the rules of the updated API and disabled email checker until it is fixed.
	- Core: Updated the config to look nicer.
	- Core: Deleted the ID's in databases
	- API: You can now create custom services clients with serv_add()
	- Core/Modules: HostServ and MemoServ are no longer default services.
	- Modules: protocol/inspircd and protocol/charybdis are now version 0.8.
	- Core/Modules/Protocols: Fixed several bugs in the updated API.
	- Modules: Added hostserv/main.
	- Events: Added event_eos for when we finish syncing.
	- Protocols: Fixed a bug where, after 10 services clients, services would break.
	- Contrib - mattwb65: os_userlog now allows you to choose between OperServ or a custom service logging
	- Protocols: Added serv_sethost
	- Protocols - InspIRCd: check for m_chghost
	- Modules: Fixed a bug in hostserv/main where, it wouldn't create HostServ if we're already synced.
	- API: Added serv_del() for deleting services clients.
	- API: Made Chakora more modular by moving API stuff to separate modules located in src/API.