@@ -64,3 +64,4 @@ Current
 	- Modules: Fixed a bug in hostserv/main where, it wouldn't create HostServ if we're already synced.
 	- API: Added serv_del() for deleting services clients.
 	- API: Made Chakora more modular by moving API stuff to separate modules located in src/API.
+	- API: Added create_cmdtree() and delete_cmdtree() for enabling commands on only services clients we want to have commands.
